# ModalScaling

./: README.md  pyproject.toml
scripts/: parallel_compute.py  run_parallel_example.py  web_endpoints.py
